--- a/03-multi-container.yaml
+++ b/03-multi-container.yaml
@@ -10,4 +10,4 @@ spec:
       - containerPort: 80
   - name: alma
     image: "almalinux:9"
-    command: "sleep 2000"
+    command: ["sleep","2000"]
