--- a/10-secrets.yaml
+++ b/10-secrets.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: pod-secret
 data:
-  username: YWRtaW4K
-  password: YWRtaW4xMjM0Cg==
+  username: "YWRtaW4K"
+  password: "YWRtaW4xMjM0Cg=="
