--- a/16-replicaset.yaml
+++ b/16-replicaset.yaml
@@ -4,8 +4,8 @@ metadata:
   name: nginx
   # these labels belongs to replicaset resource
   labels: 
-    app: nginx
-    tier: frontend
+    app: nginx-rs
+    tier: frontend-rs
 spec:
     # modify replicas according to your case
   replicas: 3
