--- a/storage/02-ebs-dynamic.yaml
+++ b/storage/02-ebs-dynamic.yaml
@@ -9,7 +9,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 4Gi
+      storage: 4Gi # here we are asking storage class for storage of our pod data
 ---
 apiVersion: v1
 kind: Pod
@@ -26,7 +26,7 @@ spec:
     - name: persistent-storage
       mountPath: /usr/share/nginx/html
   nodeSelector:
-    topology.kubernetes.io/zone: us-east-1c
+    topology.kubernetes.io/zone: us-east-1d
   volumes:
   - name: persistent-storage
     persistentVolumeClaim:
