--- a/storage/03-efs-static.yaml
+++ b/storage/03-efs-static.yaml
@@ -14,18 +14,18 @@ spec:
     driver: efs.csi.aws.com
     volumeHandle: "fs-06599e30986cf0080" # this is file system id of EFS we created manually
 ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: efs-static-claim
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   storageClassName: ""
-#   volumeName: efs-static
-#   resources:
-#     requests:
-#       storage: 2Gi
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: efs-static-claim
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  volumeName: efs-static
+  resources:
+    requests:
+      storage: 2Gi
 # ---
 # apiVersion: v1
 # kind: Pod
