--- a/storage/ebs-dynamic-storageclass.yaml
+++ b/storage/ebs-dynamic-storageclass.yaml
@@ -1,3 +1,4 @@
+#this is admin task, admin creates storage class and we can use that in 02-ebs-dynamic.yaml.. 
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
